welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: '(' expected but identifier found.
    for k(<- 0 to nbPas-1){
        ^Program:8: error: illegal start of simple expression
  }
  ^